--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Adalab/project-promo-P-module-4-team-8#readme",
   "dependencies": {
+    "better-sqlite3": "^7.5.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
